make changes in services page

--- a/landing_page/services.html
+++ b/landing_page/services.html
@@ -128,7 +128,7 @@
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
                     <h2 class="mb-3">1. Recruiting Services</h2>
-                    <p class="mb-5">Besides buying the template you need some basic web skills in order to customize it. Nothing too fancy HTML/CSS will do just fine and a little bit of image editing. You can always hire a web designer to help with the customization work while you provide the template and the content that is the most important.</p>
+                    <p class="mb-5"> Recruiting services play a pivotal role in today's dynamic job market by bridging the gap between job seekers and employers. These services facilitate the process of talent acquisition, helping businesses find the right candidates for their open positions while aiding individuals in discovering exciting career opportunities that align with their skills and aspirations.</p>
                     <img class="img-fluid mb-5" src="images/article-details-small.jpg" alt="alternative">
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -148,24 +148,24 @@
                     <ul class="list-unstyled li-space-lg mb-5">
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Card slider</strong> for testimonials, statistics numbers for important values image slider for logos</div>
+                            <div class="media-body"><strong>Candidate Sourcing and Screening</strong> Recruiting services actively source potential candidates through various channels, including job boards, social media, and industry networks. They meticulously screen applicants, evaluating their qualifications, experience, and cultural fit with the hiring company.</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Dropdown navigation</strong> and useful extra pages for article details, terms conditions and privacy policy</div>
+                            <div class="media-body"><strong>Specialized Expertise</strong> Many recruiting services focus on specific industries, roles, or skill sets. This specialization enables them to understand the unique needs of their clients and identify candidates with the right skills and cultural fit</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Clean light design</strong> mixing purple, orange and gray hues with one color backgrounds to maximize</div>
+                            <div class="media-body"><strong>Time and Cost Efficiency</strong> Outsourcing the recruitment process to experts saves businesses valuable time and resources. Instead of dedicating significant internal resources to hiring, companies can focus on their core operations while the recruiting service handles the hiring process.</div>
                         </li>
-                        <li class="media">
+                        <!-- <li class="media">
                             <i class="fas fa-square"></i>
                             <div class="media-body"><strong>Together with</strong> touches of call to action green, the overall landing page design will showcase your app</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
                             <div class="media-body"><strong>This template</strong> is built with HTML, CSS and Bootstrap to ensure the highest flexibility for all users</div>
-                        </li>
+                        </li> -->
                     </ul>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -189,8 +189,8 @@
                                     <span class="fa-stack-1x">1</span>
                                 </span>
                                 <div class="media-body">
-                                    <h5>High Quality Service</h5>
-                                    <p>Features include an eye catching morphtext in the header, details lightbox for more details information</p>
+                                    <h5>Benefits for Employers</h5>
+                                    <p>Recruiting services have access to a wide network of candidates, including those who might not actively be searching for jobs. This increases the chances of finding the best match for a position.</p>
                                 </div>
                             </li>
                         </ul>
@@ -206,8 +206,8 @@
                                     <span class="fa-stack-1x">2</span>
                                 </span>
                                 <div class="media-body">
-                                    <h5>Prompt Timely Delivery</h5>
-                                    <p>Statistics numbers for important values, card slider for testimonials, image slider for customer logos</p>
+                                    <h5>Reduced Risk</h5>
+                                <p>Proper candidate screening and evaluation mitigate the risk of hiring mismatched or unqualified individuals.</p>
                                 </div>
                             </li>
                         </ul>
@@ -223,8 +223,8 @@
                                     <span class="fa-stack-1x">3</span>
                                 </span>
                                 <div class="media-body">
-                                    <h5>Skilled Team Involved</h5>
-                                    <p>Some useful extra pages are bundled with the template lik article details, terms conditions and privacy policy</p>
+                                    <h5>Market Insights</h5>
+                                    <p>Candidates can benefit from the industry knowledge and insights recruiting professionals provide, enhancing their understanding of the job market.</p>
                                 </div>
                             </li>
                         </ul>
@@ -243,7 +243,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <p class="mb-5">Besides buying the template you need some basic web skills in order to customize it. Nothing too fancy HTML/CSS will do just fine and a little bit of image editing. You can always hire a web designer to help with the customization work while you provide the template and the content that is the most important.</p>
+                    <p class="mb-5">Recruiting services play a pivotal role in matching talented individuals with organizations that need their skills. By leveraging their expertise, connections, and resources, these services contribute to building strong and productive teams that drive business success.</p>
                     <a class="btn-solid-reg" href="contact.html">Contact Us</a>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
