make changes in the navigation of all the pages

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -67,13 +67,13 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Drop</a>
+                            aria-haspopup="true" aria-expanded="false">Details</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item page-scroll" href="job-details.html">Job Details</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="terms.html">Terms Conditions</a>
+                           <!--  <a class="dropdown-item page-scroll" href="terms.html">Terms Conditions</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="privacy.html">Privacy Policy</a>
+                            <a class="dropdown-item page-scroll" href="privacy.html">Privacy Policy</a> -->
                         </div>
                     </li>
                     <li class="nav-item">
@@ -89,7 +89,7 @@
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item page-scroll" href="../Admin/Admin_login.html">Admin</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="../Students/student_login_register.html">Students</a>
+                            <!-- <a class="dropdown-item page-scroll" href="../Students/student_login_register.html">Students</a> -->
                         </div>
                     </li>
 
