--- a/landing_page/job-details.html
+++ b/landing_page/job-details.html
@@ -37,12 +37,12 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-light">
         <div class="container">
-            
+
             <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Viso</a> -->
+            <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">HB</a> -->
 
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/Logo_bg.png" alt="alternative"></a> 
+            <a class="navbar-brand logo-image" href="index.html"><img src="images/Logo_bg.png" alt="alternative"></a>
 
             <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
@@ -60,19 +60,50 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drop</a>
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">Details</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item page-scroll" href="job-details.html">Job Details</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="terms.html">Terms Conditions</a>
+                           <!--  <a class="dropdown-item page-scroll" href="terms.html">Terms Conditions</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="privacy.html">Privacy Policy</a>
+                            <a class="dropdown-item page-scroll" href="privacy.html">Privacy Policy</a> -->
                         </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
-                    <img src="images/user.avif" class="user-pic" onclick="toggleMenu()">
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false"> 
+                            <img class="dropdown-img" src="./images/user.avif" alt="">
+                        </a>
+
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item page-scroll" href="../Admin/Admin_login.html">Admin</a>
+                            <div class="dropdown-divider"></div>
+                            <!-- <a class="dropdown-item page-scroll" href="../Students/student_login_register.html">Students</a> -->
+                        </div>
+                    </li>
+
+                    <!-- <img src="images/user.avif" class="user-pic" onclick="toggleMenu()"> -->
+                    <!-- <img src="images/user.png" class="user-pic" onclick="toggleMenu()">
+
+                    <div class="sub-menu-wrap" id="subMenu">
+                        <div class="sub-menu">
+                            <a href="#" class="sub-menu-link">
+                                <img src="images/profile.png">
+                                <p>Admin Profile</p>
+                                <span>></span>
+                            </a>
+                            <a href="Portfolio.html" class="sub-menu-link">
+                                <img src="images/profile.png">
+                                <p>Student Profile</p>
+                                <span>></span>
+                            </a>
+                        </div>
+                    </div> -->
                 </ul>
                 <!-- <span class="nav-item social-icons">
                     <span class="fa-stack">
