remove the image descirption from about page

--- a/landing_page/about.html
+++ b/landing_page/about.html
@@ -307,8 +307,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <img class="img-fluid mt-5 mb-3" src="images/article-details-large.jpg" alt="alternative">
-                    <i class="mb-5"><strong>Image description which contains italic text and it's not extremely
-                            long</strong></i>
+                   <!--  <i class="mb-5"><strong>Image description which contains italic text and it's not extremely
+                            long</strong></i> -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
