Make changes in the services page

--- a/landing_page/services.html
+++ b/landing_page/services.html
@@ -72,7 +72,19 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
-                    <img src="images/user.avif" class="user-pic" onclick="toggleMenu()">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false"> 
+                            <img class="dropdown-img" src="./images/user.avif" alt="">
+                        </a>
+
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item page-scroll" href="../Admin/Admin_login.html">Admin</a>
+                            <div class="dropdown-divider"></div>
+                            <!-- <a class="dropdown-item page-scroll" href="../Students/student_login_register.html">Students</a> -->
+                        </div>
+                    </li>
+
                 </ul>
                 <!-- <span class="nav-item social-icons">
                     <span class="fa-stack">
@@ -258,7 +270,7 @@
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
                     <h2 class="mb-3">2. Candidate evaluation</h2>
-                    <p class="mb-5">Besides buying the template you need some basic web skills in order to customize it. Nothing too fancy HTML/CSS will do just fine and a little bit of image editing. You can always hire a web designer to help with the customization work while you provide the template and the content that is the most important.</p>
+                    <p class="mb-5">Candidate evaluation is a critical phase in the hiring process, where organizations assess the suitability of potential candidates for a specific role. It involves a systematic analysis of a candidate's qualifications, skills, experience, and cultural alignment with the company's values. .</p>
                     <img class="img-fluid mb-5" src="images/article-details-small.jpg" alt="alternative">
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -272,30 +284,30 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <h3 class="mb-3">Advantages Of Working With Us Instead Of Others</h3>
-                    <p class="mb-4">Besides buying the template you need some basic web skills in order to customize it. Nothing too fancy HTML/CSS will do just fine and a little bit of image editing. You can always hire a web designer to help with the customization work while you provide the template and the content that is the most important.</p>
+                    <h3 class="mb-3">Resume and Application Review</h3>
+                    <p class="mb-4">The process often begins with a comprehensive review of the candidate's resume and application. This helps recruiters identify the candidate's qualifications, experience, and whether they meet the basic requirements of the position.</p>
                     
                     <ul class="list-unstyled li-space-lg mb-5">
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Card slider</strong> for testimonials, statistics numbers for important values image slider for logos</div>
+                            <div class="media-body"><strong>Interviews:</strong> Interviews are a cornerstone of candidate evaluation. They allow employers to delve deeper into a candidate's background, skills, and experiences. Different interview formats, such as behavioral interviews or technical interviews, can reveal how candidates handle challenges and interact with others.</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Dropdown navigation</strong> and useful extra pages for article details, terms conditions and privacy policy</div>
+                            <div class="media-body"><strong>Skills Assessment:</strong> Depending on the nature of the role, candidates may be required to undergo skills assessments or tests to validate their technical proficiency. These assessments provide objective insights into a candidate's abilities.</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Clean light design</strong> mixing purple, orange and gray hues with one color backgrounds to maximize</div>
+                            <div class="media-body"><strong>Cultural Fit:</strong> Cultural fit is increasingly emphasized in the evaluation process. Candidates whose values and work style align with the company culture are more likely to thrive and contribute positively to the team.</div>
                         </li>
-                        <li class="media">
+                        <!-- <li class="media">
                             <i class="fas fa-square"></i>
                             <div class="media-body"><strong>Together with</strong> touches of call to action green, the overall landing page design will showcase your app</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
                             <div class="media-body"><strong>This template</strong> is built with HTML, CSS and Bootstrap to ensure the highest flexibility for all users</div>
-                        </li>
+                        </li> -->
                     </ul>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -319,8 +331,8 @@
                                     <span class="fa-stack-1x">1</span>
                                 </span>
                                 <div class="media-body">
-                                    <h5>High Quality Service</h5>
-                                    <p>Features include an eye catching morphtext in the header, details lightbox for more details information</p>
+                                    <h5>Structured Interviews</h5>
+                                    <p>Using a standardized set of questions for all candidates ensures fairness and consistency. Behavioral questions can reveal how candidates have approached situations in the past, offering insights into their problem-solving and decision-making skills.</p>
                                 </div>
                             </li>
                         </ul>
@@ -336,8 +348,8 @@
                                     <span class="fa-stack-1x">2</span>
                                 </span>
                                 <div class="media-body">
-                                    <h5>Prompt Timely Delivery</h5>
-                                    <p>Statistics numbers for important values, card slider for testimonials, image slider for customer logos</p>
+                                    <h5>Cognitive and Personality Assessments</h5>
+                                    <p>These assessments provide insights into a candidate's cognitive abilities, personality traits, and potential fit within the team dynamics.</p>
                                 </div>
                             </li>
                         </ul>
@@ -353,8 +365,8 @@
                                     <span class="fa-stack-1x">3</span>
                                 </span>
                                 <div class="media-body">
-                                    <h5>Skilled Team Involved</h5>
-                                    <p>Some useful extra pages are bundled with the template lik article details, terms conditions and privacy policy</p>
+                                    <h5>Enhanced Diversity and Inclusion</h5>
+                                    <p>Objective evaluation techniques help mitigate biases, fostering a more diverse and inclusive workforce.</p>
                                 </div>
                             </li>
                         </ul>
@@ -373,7 +385,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <p class="mb-5">Besides buying the template you need some basic web skills in order to customize it. Nothing too fancy HTML/CSS will do just fine and a little bit of image editing. You can always hire a web designer to help with the customization work while you provide the template and the content that is the most important.</p>
+                    <p class="mb-5">Candidate evaluation is a multidimensional process that goes beyond assessing technical skills. It requires a strategic approach to ensure that the chosen candidates are a perfect match for the organization's requirements and culture. By implementing a thoughtful evaluation strategy, organizations can make informed hiring decisions that result in long-term value and success.
+
+                        .</p>
                     <a class="btn-solid-reg mb-5" href="contact.html">Contact Us</a>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
