Make changes in job details

--- a/landing_page/job-details.html
+++ b/landing_page/job-details.html
@@ -33,7 +33,6 @@
     <link rel="icon" href="images/fav-icon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
-    
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-light">
         <div class="container">
@@ -125,6 +124,7 @@
     <!-- end of navigation -->
 
 
+
     <!-- Header -->
     <header class="ex-header bg-gray">
         <div class="container">
@@ -144,7 +144,7 @@
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
                     <div class="text-box mt-5">
-                        <p><strong>Job Description:</strong> All designers, developers and tech-savvy people will be able to customize this template with basic web coding skills. Among the features you will find details lightbox for more details information, tabbed content for feature details, video lightbox, card slider for testimonials, statistics numbers, image slider for customer logos.</p>
+                        <p><strong>Job Description:</strong> In the ever-evolving world of digital design, a skilled web designer equipped with expertise in Photoshop, Illustrator, and HTML/CSS is an invaluable asset to any project or organization. This creative professional seamlessly combines visual artistry with technical prowess to bring to life captivating and user-centric digital experiences.</p>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -158,26 +158,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <h2 class="mb-3">Requirements</h2>
+                    <h2 class="mb-3">Key Qualifications and Skills:-</h2>
                     <p class="mb-4">Besides buying the template you need some basic web skills in order to customize it. Nothing too fancy HTML/CSS will do just fine and a little bit of image editing. You can always hire a web designer to help with the customization work while you provide the template and the content that is the most important.</p>
                     <ul class="list-unstyled li-space-lg mb-5">
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Card slider</strong> for testimonials, statistics numbers for important values image slider for logos</div>
+                            <div class="media-body"><strong>Creative Design Mastery:</strong> A proficient web designer excels in translating ideas into visually compelling designs. Proficiency in Adobe Photoshop and Illustrator empowers them to create stunning graphics, layouts, and imagery that resonate with the target audience.</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Dropdown navigation</strong> and useful extra pages for article details, terms conditions and privacy policy</div>
+                            <div class="media-body"><strong>User-Centered Approach:</strong> The ability to design with the end user in mind is a hallmark of a skilled web designer. They understand how to structure interfaces and content for intuitive navigation and optimal user experience.</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Clean light design</strong> mixing purple, orange and gray hues with one color backgrounds to maximize</div>
+                            <div class="media-body"><strong>HTML/CSS Proficiency:</strong> Mastery of HTML and CSS enables the web designer to seamlessly translate static designs into interactive web pages. This expertise is essential for ensuring that the visual appeal translates effectively across different devices and screen sizes.</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Together with</strong> touches of call to action green, the overall landing page design will showcase your app</div>
+                            <div class="media-body"><strong>Responsive Design:</strong> A web designer with HTML/CSS skills can develop responsive designs that adapt flawlessly to various devices, from desktop monitors to smartphones and tablets.</div>
                         </li>
-                        <li class="media">
+                        <!-- <li class="media">
                             <i class="fas fa-square"></i>
                             <div class="media-body"><strong>This template</strong> is built with HTML, CSS and Bootstrap to ensure the highest flexibility for all users</div>
                         </li>
@@ -200,33 +200,33 @@
                         <li class="media">
                             <i class="fas fa-square"></i>
                             <div class="media-body"><strong>Lightbox details</strong> for more features description which includes an image section and a text container</div>
-                        </li>
+                        </li> -->
                     </ul>
 
-                    <h2 class="mb-3">Benefits</h2>
-                    <p class="mb-4">In return you get a high quality, updated item together with technical support. Besides buying the template you need some basic web skills in order to customize it. Nothing too fancy HTML/CSS will do just fine and a little bit of image editing. You can always hire a web designer to help with the customization of the HTML template.</p>
+                    <h2 class="mb-3">Roles and Contributions:</h2>
+                    <p class="mb-4">The web designer ensures that websites and applications are equally captivating and functional across various devices, providing seamless user experiences..</p>
                     <ul class="list-unstyled li-space-lg mb-4">
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Card slider</strong> for testimonials, statistics numbers for important values image slider for logos</div>
+                            <div class="media-body"><strong>Visual Storytelling:</strong>  Leveraging Photoshop and Illustrator, the web designer crafts visual narratives that communicate a brand's essence, message, and values.</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Dropdown navigation</strong> and useful extra pages for article details, terms conditions and privacy policy</div>
+                            <div class="media-body"><strong>User Interface Design: </strong> Collaborating with user experience (UX) teams, the web designer creates user-friendly interfaces that streamline navigation and enhance user engagement.</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Clean light design</strong> mixing purple, orange and gray hues with one color backgrounds to maximize</div>
+                            <div class="media-body"><strong>Front-End Development:</strong> By transforming designs into HTML/CSS code, the web designer brings designs to life, ensuring pixel-perfect accuracy and functionality.</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>Together with</strong> touches of call to action green, the overall landing page design will showcase your app</div>
+                            <div class="media-body"><strong>Visual Excellence:</strong> A web designer's creative prowess translates into visually appealing designs that captivate users and reinforce brand identity.</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><strong>This template</strong> is built with HTML, CSS and Bootstrap to ensure the highest flexibility for all users</div>
+                            <div class="media-body"><strong>User Engagement:</strong> Designs optimized for user experience enhance engagement, interaction, and overall satisfaction.</div>
                         </li>
-                        <li class="media">
+                       <!--  <li class="media">
                             <i class="fas fa-square"></i>
                             <div class="media-body"><strong>W3C Compliant Code</strong> well commented, structured and tested to work smoothly in all modern browsers</div>
                         </li>
@@ -245,7 +245,7 @@
                         <li class="media">
                             <i class="fas fa-square"></i>
                             <div class="media-body"><strong>Lightbox details</strong> for more features description which includes an image section and a text container</div>
-                        </li>
+                        </li> -->
                     </ul>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -259,7 +259,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <p class="mb-5">Besides buying the template you need some basic web skills in order to customize it. Nothing too fancy HTML/CSS will do just fine and a little bit of image editing. You can always hire a web designer to help with the customization work while you provide the template and the content that is the most important.</p>
+                    <p class="mb-5">In today's digital landscape, a web designer proficient in Photoshop, Illustrator, and HTML/CSS is a linchpin for creating remarkable online experiences. This multidisciplinary professional transforms concepts into reality, blending artistic expression with technical prowess to shape the digital world we interact with every day.</p>
                     <a class="btn-solid-reg mb-5" href="index.html#application">Apply For Job</a>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
